# ChessProject

./: .gitattributes  .gitignore  ArrayUtils.c  ArrayUtils.h  CMakeLists.txt  CommandLineCommands.h  CommandLineGame.c  CommandLineGame.h  Game.c  Game.h  GameBoard.c  GameBoard.h  Jonathan-TDL  Messages.h  MiniMax.c  MiniMax.h  MiniMaxAlgorithm.h  Moves.c  Moves.h  Parser.c  Parser.h  Pieces.c  Pieces.h  TDL  XmlUtils.c  XmlUtils.h  consoleRendering.c  consoleRendering.h  constants.h  gui.c  main.c  makefile  makefile2  partners.txt  save_slot_1.xml  save_slot_2.spchess  save_slot_2.xml  save_slot_3.spchess  save_slot_3.xml  saved_game_1.xml  (+2 more)
Gui/: BMPPathConstants.h  Constants.h  Events.h  GameBoardControl.c  GameBoardControl.h  GameWindow.c  GameWindow.h  GuiManager.c  GuiManager.h  LoadGameWindow.c  LoadGameWindow.h  MainWindow.c  MainWindow.h  NewGameWindow.c  NewGameWindow.h  PathsConstants.h  SDLHelperFunctions.c  SDLHelperFunctions.h  main.c  mainGui.c  mainGui.h
Gui/images/: images.rar
Tests/: testScript.sh  test_1.desc  test_1.in  test_1.out  test_2.desc  test_2.in  test_2.out  test_3.desc  test_3.in  test_3.out  test_4.desc  test_5.desc  test_5.in  ‏‏test_1.out
Tests/itay tests/: 1.in  1.out  1.xml  2.in  2.out  3.in  3.out  4a.out  SettingTest.out  fail.in  settingTest.in  test2.xml  testScript.sh
